manifests/buyveteranproducts.com/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: buyveteranproducts
  labels:
    app.kubernetes.io/name: buyveteranproducts
    app.kubernetes.io/instance: buyveteranproducts
    app.kubernetes.io/version: "1.16.0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: buyveteranproducts
      app.kubernetes.io/instance: buyveteranproducts
  template:
    metadata:
      labels:
        app.kubernetes.io/name: buyveteranproducts
        app.kubernetes.io/instance: buyveteranproducts
    spec:
      serviceAccountName: buyveteranproducts
      securityContext:
        {}
      containers:
        - name: buyveteranproducts
          securityContext:
            {}
          image: "awbsough/buyvetproducts:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources: {}
