manifests/buyveteranproducts.com/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buyveteranproducts
spec:
  tls:
  - hosts:
      - obso.ninja
    secretName: buyveteranproducts-tls
  rules:
  - host: obso.ninja
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: buyveteranproducts
            port:
              number: 80
